--- a/environment.yaml
+++ b/environment.yaml
@@ -9,4 +9,6 @@ dependencies:
   - racon=1.4.10
   - minimap2=2.17
   - snakemake=7.32.4
-  - matplotlib=3.7.1
+  - matplotlib=3.10.0
+  - pysam=0.22.1
+  - pandas=2.3.1
