--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-# Input directories
+# Inputs
 reference_FASTA: "M_tuberculosis_H37Rv_v3.fasta"
 illumina_directory: "illumina_reads"
 nanopore_directory: "nanopore_reads"
-# Output directory
+# Output
 output_dir: "pipeline_output"
 
