--- a/environment.yaml
+++ b/environment.yaml
@@ -9,7 +9,7 @@ dependencies:
   - racon=1.4.10
   - minimap2=2.17
   - snakemake=7.32.4
-  - matplotlib=3.10.0
+  - matplotlib
   - pysam=0.22.1
   - pandas=2.3.1
   - pyfastaq=3.18.0
